<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/menu_select_all"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_library_add_white_24dp"
        android:title="@string/menu_add_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_delete_tab" />
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/menu_rename_tab" />

    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_update_white_24dp"
        android:title="@string/menu_update"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>
